--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,8 @@ html{
 }
 
 body{
-   background-color: var(--light-bg);
+   /*background-color: var(--light-bg);*/
+   background-color: white;
 }
 
 section{
@@ -168,7 +169,7 @@ section{
 }
 
 .header .flex .logo{
-   font-size: 2.5rem;
+   font-size: 3.5rem;
    color:var(--black);
 }
 
